[project]
name = "thor"
version = "0.1.0"
description = ""
authors = [
    {name = "theNullP0inter",email = "nikhilallamsetti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[tool.poetry]
packages = [
    {include = "thor", from = "src"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
thor = "thor.cli:app"